feat: initial epsilon-pareto dominance